syntax = "proto3";

package com.training.proto;

option java_multiple_files = true;
option java_package = "com.training.grpc";

message DummyMessage {
  string message = 1;
}