syntax = "proto3";

package com.training.proto;

import "DummyMessage.proto";

option java_multiple_files = true;
option java_package = "com.training.grpc";

service UpperCaseService {
    rpc upperCaseFunction(DummyMessage) returns (DummyMessage) {};
}


